--- a/style.scss
+++ b/style.scss
@@ -11,117 +11,112 @@ $minWidth: 1100px;
 $darkBlue: #212832;
 
 
-.flexCenter{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 .topNav{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    height: 70px;
-   
-    width: 100%;
-    .center{
-        width: 80%;
+    width: $maxWidth;
+    margin: 0 auto;
+    height: 80px;
+    padding: 40px 10px 10px 10px;
+    background-color: greenyellow;
+    .navContainer{
         display: flex;
-        justify-content: space-around;
+        column-gap: 35px;
         align-items: center;
-        padding: 15px 20px;
-        .navContainer{
+        .navBar{
             display: flex;
-            column-gap: 40px;
-            align-items: center;
-            .navBar{
-                display: flex;
-                column-gap: 50px;
-                list-style-type: none;
-                align-items: center;
-                color: $darkBlue; 
-                a{
-                    text-decoration: none;
-                    color: $darkBlue;
-                } 
-                li:last-child{
-                    margin-right: 70px;
-                }
-            }
-            button{
-                padding:5px 15px;
-                background-color: transparent;
-                border-radius: 5px;
+            column-gap: 60px;
+            list-style-type: none;
+            a{
+                text-decoration: none;
                 color: $darkBlue;
-                cursor: pointer;
-                }
-            .login{
-                border: 0px;
+                font-size: 16px;
+                transition: all 0.5s ease-in-out;
             }
-            .singUp{
-                border: 1px solid $darkBlue;
+            a:hover{
+                font-weight: 700;
             }
+            li:last-child{
+                margin-right: 40px;
+            }
+        }
+        button{
+            padding: 5px 15px;
+            background-color: transparent;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+            color: $darkBlue;
+        }
+        .login{
+            border: 0px;
+            transition: all 0.5s ease-in-out;
+        }
+        .login:hover{
+            font-weight: 700;
+        }
+        .signUp{
+            border: 1px solid $darkBlue;
+            transition: all 0.5s ease-in-out;
+        }
+        .signUp:hover{
+            color: white;
+            background-color: $darkBlue;
         }
         .languageSelect{
             background-color: transparent;
             border: 0px;
-            color: $darkBlue;
+            font-size: 16px;
+            font-weight: 600;
             cursor: pointer;
+            option{
+                font-size: 16px;
+                border: 0px;
+            }
         }
     }
-    
+
 }
 
 .heroContent{
-    width: 100%;
-    .heroCenterContainer{
-        width: 70%;
-        padding: 15px 60px;
-       .textContainer{
+    width: $midWidth;
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    margin: 0px auto;
+    background-color: aqua;
+    padding: 20px 30px;
+    .textContainer{
+        width: 49%;
+        display: flex;
+        row-gap: 10px;
+        align-items: start;
         flex-direction: column;
-        align-items: flex-start;
-        row-gap: 20px;
-        width: 50%;
-        
         span{
             color: #DF6951;
             font-size: 20px;
             font-weight: 700;
         }
         h1{
-            font-family: "Volkhov", serif;
-            font-size: 60px;
-            font-weight: 900;
-            color: $darkBlue;
+            font-family: "Volkhov", serif ;
+            font-size: 65px;
+            line-height: 69px;
         }
         p{
-            color:#5E6282;
             font-size: 16px;
+            color: #5E6282 ;
+            
         }
-        .btnContainer{
-            column-gap: 25px;
-            .findOutMore{
-                padding: 12px 25px;
-                background-color: #F1A501;
-                color: white;
-                border-radius: 5px;
-                border: 0px;
-            }
-            .play{
-                border-radius: 50%;
-                width: 40px;
-                height: 40px;
-                background-color: #DF6951;
-                border: 0px;
-                color: white;
-                margin-left: 20px;
-            }
-            span{
-                color:#5E6282;
-            font-size: 16px;
-            font-weight: 400;
-            }
+    }
+    .imgContainer{
+        width: 700px;
+       
+        padding-right: 10px;
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
-       }
     }
 }
