--- a/style.scss
+++ b/style.scss
@@ -296,3 +296,91 @@ $darkBlue: #212832;
         }
     }
 }
+
+.subscribe {
+    background-image: url(./images/Rectangle\ 164.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: $midWidth;
+    margin: 0 auto;
+    height: 407px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    margin-bottom: 90px;
+
+    .planeBlue {
+        position: absolute;
+        top: -20px;
+        z-index: 1;
+        left: 1150px;
+    }
+
+    .secondCircle {
+        position: absolute;
+        top: 0px;
+        left: 997px;
+    }
+
+    img {
+        position: absolute;
+        bottom: 0px;
+        left: 40px;
+        z-index: -1;
+        fill: #C4C4C4;
+    }
+
+    .plus {
+        position: absolute;
+        bottom: -60px;
+        left: 1145px;
+    }
+
+
+
+    h3 {
+        font-size: 33px;
+        line-height: 54px;
+        color: #5E6282;
+        font-weight: 600;
+        text-align: center;
+        padding: 0 150px;
+    }
+
+    .input {
+        display: flex;
+        padding-top: 60px;
+        column-gap: 20px;
+
+        input {
+            padding: 20px;
+            text-align: left;
+            width: 400px;
+            font-size: 17px;
+            border: none;
+            border-radius: 10px;
+
+        }
+
+        .sub {
+            padding: 20px 60px;
+            font-size: 17px;
+            font-weight: 600;
+            border: none;
+            border-radius: 10px;
+            color: white;
+            background-color: #FF7D68;
+            cursor: pointer;
+            transition: all 0.3s ease-in-out;
+        }
+
+        .sub:hover {
+            background-color: white;
+            color: #FF7D68;
+
+        }
+    }
+
+}
