--- a/style.scss
+++ b/style.scss
@@ -297,6 +297,49 @@ $darkBlue: #212832;
     }
 }
 
+.logoContainer {
+    width: $midWidth;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 100px auto 150px;
+    position: relative;
+
+    .logoImg {
+
+        height: 80px;
+        width: 200px;
+        overflow: hidden;
+        border-radius: 8px;
+        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+
+        .cover {
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+            padding: 5px 20px;
+
+
+        }
+
+        .size {
+            object-fit: contain;
+            width: 100%;
+            height: 100%;
+            padding: 5px 20px;
+        }
+
+
+    }
+
+    .logoCircle {
+        position: absolute;
+        bottom: -170px;
+        left: -70px;
+    }
+}
+
+
 .subscribe {
     background-image: url(./images/Rectangle\ 164.svg);
     background-size: cover;
